[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/scenes/actors/car_templates/car_template.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/scenes/actors/player_car.gd" type="Script" id=5]
[ext_resource path="res://source/utils/mobile_controls.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 16.5, 117.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 50, 400 )

[node name="PlayerCar" type="KinematicBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource( 5 )
pitch_randomness = 0.1

[node name="MobileControls" parent="." instance=ExtResource( 13 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -120 )
current = true
zoom = Vector2( 1.2, 1.2 )
smoothing_enabled = true
smoothing_speed = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.500003, -25.5 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="WrapAreaL" type="Area2D" parent="."]
position = Vector2( -1200, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WrapAreaL"]
shape = SubResource( 8 )

[node name="TargetPosition" type="Position2D" parent="WrapAreaL"]
position = Vector2( 2100, 0 )

[node name="WrapAreaR" type="Area2D" parent="."]
position = Vector2( 1200, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WrapAreaR"]
shape = SubResource( 8 )

[node name="TargetPosition" type="Position2D" parent="WrapAreaR"]
position = Vector2( -2100, 0 )

[node name="Car" parent="." instance=ExtResource( 1 )]

[connection signal="area_entered" from="WrapAreaL" to="." method="_on_WrapAreaL_area_entered"]
[connection signal="area_entered" from="WrapAreaR" to="." method="_on_WrapAreaR_area_entered"]
